--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -158,7 +158,7 @@
                                             </div>
                                         </div>
                                         <div class="main-menu-three__btn-box">
-                                            <a href="contact.html" class="thm-btn main-menu-three__btn">Get started</a>
+                                            <a href="{% url 'contact' %}" class="thm-btn main-menu-three__btn">Get started</a>
                                         </div>
                                     </div>
                                 </div>
