--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -112,7 +112,7 @@
                     <div class="main-menu-three__wrapper-inner clearfix">
                         <div class="main-menu-three__left">
                             <div class="main-menu-three__logo">
-                                <a href="index.html"><img src="{% static 'website/assets/images/resources/hurucom logo.png' %}" alt="" width="140"
+                                <a href="{% url 'home' %}"><img src="{% static 'website/assets/images/resources/hurucom logo.png' %}" alt="" width="140"
                                         height="80"></a>
                             </div>
                         </div>
