--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -470,8 +470,7 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                             <div class="footer-widget__column footer-widget__about">
                                 <div class="footer-widget__about-text-box">
-                                    <p class="footer-widget__about-text">TV on your every screen with the so fastest
-                                        internet</p>
+                                    <p class="footer-widget__about-text">Quality fast internet connection</p>
                                 </div>
                                 <div class="site-footer__social">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -543,7 +542,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="{% static 'website/assets/images/resources/hurucom logo.png' %}" width="140" height="80"
+                <a href="{% url 'home' %}" aria-label="logo image"><img src="{% static 'website/assets/images/resources/hurucom logo.png' %}" width="140" height="80"
                         alt="" /></a>
             </div>
             <!-- /.logo-box -->
