--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -373,18 +373,16 @@
                         <div class="about-four__right">
                             <div class="section-title text-left">
                                 <span class="section-title__tagline">about company</span>
-                                <h2 class="section-title__title">Get to know about zeinet internet company</h2>
+                                <h2 class="section-title__title">Get to know about Hurucom internet company</h2>
                             </div>
-                            <p class="about-four__text-1">There are many variations of passages of lorem ipsum available
-                                the majority have suffered alteration in some form by injected humour. Duis aute irure
-                                dolor lipsum is simply free text available.</p>
+                            <p class="about-four__text-1">Hurucom Isp ..................................</p>
                             <ul class="about-four__points list-unstyled">
                                 <li>
                                     <div class="icon">
                                         <i class="fa fa-arrow-right"></i>
                                     </div>
                                     <div class="text">
-                                        <p>Internet &amp; TV service solutions</p>
+                                        <p>Internet &amp; CCTVs </p>
                                     </div>
                                 </li>
                                 <li>
@@ -400,7 +398,7 @@
                                         <i class="fa fa-arrow-right"></i>
                                     </div>
                                     <div class="text">
-                                        <p>Live sports and TV shows with ultra fast speed</p>
+                                        <p>HD videos with ultra fast speed</p>
                                     </div>
                                 </li>
                             </ul>
@@ -424,7 +422,7 @@
                         <div class="testimonial-one__left">
                             <div class="section-title text-left">
                                 <span class="section-title__tagline">our feedbacks</span>
-                                <h2 class="section-title__title">What they’re talking about zeinet</h2>
+                                <h2 class="section-title__title">What they’re talking about Hurucom</h2>
                             </div>
                         </div>
                     </div>
@@ -459,9 +457,7 @@
                                 <div class="item">
                                     <div class="testimonial-one__single">
                                         <div class="testimonial-one__content">
-                                            <p class="testimonial-one__text">Lorem ipsum is simply free text dolor sit
-                                                amet, consect notted adipisicing elit sed do eiusmod tempor incididunt
-                                                ut labore et dolore magna aliqua.</p>
+                                            <p class="testimonial-one__text">Very reliable internet</p>
                                             <div class="testimonial-one__shape-1"
                                                 style="background-image: url({% static 'website/' %}assets/images/shapes/testimonial-one-shape-1.png);">
                                             </div>
@@ -488,9 +484,7 @@
                                 <div class="item">
                                     <div class="testimonial-one__single">
                                         <div class="testimonial-one__content">
-                                            <p class="testimonial-one__text">Lorem ipsum is simply free text dolor sit
-                                                amet, consect notted adipisicing elit sed do eiusmod tempor incididunt
-                                                ut labore et dolore magna aliqua.</p>
+                                            <p class="testimonial-one__text">Professional CCTV technicians.</p>
                                             <div class="testimonial-one__shape-1"
                                                 style="background-image: url({% static 'website/' %}assets/images/shapes/testimonial-one-shape-1.png);">
                                             </div>
@@ -517,9 +511,7 @@
                                 <div class="item">
                                     <div class="testimonial-one__single">
                                         <div class="testimonial-one__content">
-                                            <p class="testimonial-one__text">Lorem ipsum is simply free text dolor sit
-                                                amet, consect notted adipisicing elit sed do eiusmod tempor incididunt
-                                                ut labore et dolore magna aliqua.</p>
+                                            <p class="testimonial-one__text">Very friendly customer care.</p>
                                             <div class="testimonial-one__shape-1"
                                                 style="background-image: url({% static 'website/' %}assets/images/shapes/testimonial-one-shape-1.png);">
                                             </div>
@@ -546,9 +538,7 @@
                                 <div class="item">
                                     <div class="testimonial-one__single">
                                         <div class="testimonial-one__content">
-                                            <p class="testimonial-one__text">Lorem ipsum is simply free text dolor sit
-                                                amet, consect notted adipisicing elit sed do eiusmod tempor incididunt
-                                                ut labore et dolore magna aliqua.</p>
+                                            <p class="testimonial-one__text">They are providing me me with quality internet.</p>
                                             <div class="testimonial-one__shape-1"
                                                 style="background-image: url({% static 'website/' %}assets/images/shapes/testimonial-one-shape-1.png);">
                                             </div>
@@ -575,9 +565,7 @@
                                 <div class="item">
                                     <div class="testimonial-one__single">
                                         <div class="testimonial-one__content">
-                                            <p class="testimonial-one__text">Lorem ipsum is simply free text dolor sit
-                                                amet, consect notted adipisicing elit sed do eiusmod tempor incididunt
-                                                ut labore et dolore magna aliqua.</p>
+                                            <p class="testimonial-one__text">Very competent support office.</p>
                                             <div class="testimonial-one__shape-1"
                                                 style="background-image: url({% static 'website/' %}assets/images/shapes/testimonial-one-shape-1.png);">
                                             </div>
@@ -604,9 +592,7 @@
                                 <div class="item">
                                     <div class="testimonial-one__single">
                                         <div class="testimonial-one__content">
-                                            <p class="testimonial-one__text">Lorem ipsum is simply free text dolor sit
-                                                amet, consect notted adipisicing elit sed do eiusmod tempor incididunt
-                                                ut labore et dolore magna aliqua.</p>
+                                            <p class="testimonial-one__text">Professional CCTV and TV mounting technicians.</p>
                                             <div class="testimonial-one__shape-1"
                                                 style="background-image: url({% static 'website/' %}assets/images/shapes/testimonial-one-shape-1.png);">
                                             </div>
@@ -653,8 +639,7 @@
             </div>
             <div class="container">
                 <div class="free-access__inner">
-                    <h2 class="free-access__title">Get <span>7 days</span> free access to <br> unlimited movies & TV
-                        shows</h2>
+                    <h2 class="free-access__title">Get <span>7 days</span> free access to <br> unlimited internet</h2>
                     <div class="free-access__btn-box">
                         <a href="packages-02.html" class="thm-btn free-access__btn">Get started now</a>
                     </div>
@@ -670,15 +655,15 @@
                     <ul class="list-unstyled counter-one__list">
                         <li class="counter-one__single">
                             <div class="counter-one__count-box">
-                                <h3 class="odometer" data-count="23">00</h3>
+                                <h3 class="odometer" data-count="6">00</h3>
                             </div>
                             <p class="counter-one__text">Years of <br> Experience</p>
                         </li>
                         <li class="counter-one__single">
                             <div class="counter-one__count-box">
-                                <h3 class="odometer" data-count="870">00</h3>
+                                <h3 class="odometer" data-count="60">00</h3>
                             </div>
-                            <p class="counter-one__text">Online <br> Channels</p>
+                            <p class="counter-one__text">Customer <br> Base</p>
                         </li>
                         <li class="counter-one__single">
                             <div class="counter-one__count-box">
@@ -688,9 +673,9 @@
                         </li>
                         <li class="counter-one__single">
                             <div class="counter-one__count-box">
-                                <h3 class="odometer" data-count="980">00</h3>
+                                <h3 class="odometer" data-count="3">00</h3>
                             </div>
-                            <p class="counter-one__text">Awesome <br> Movies</p>
+                            <p class="counter-one__text">Awesome <br> Tariffs</p>
                         </li>
                     </ul>
                 </div>
@@ -712,7 +697,7 @@
                             <div class="team-one__img">
                                 <img src="{% static 'website/' %}assets/images/team/team-1-1.jpg" alt="">
                                 <div class="team-one__content">
-                                    <h4 class="team-one__name"><a href="team.html">Sarah Albart</a></h4>
+                                    <h4 class="team-one__name"><a href="team.html">Edwin</a></h4>
                                     <p class="team-one__sub-title">Manager</p>
                                 </div>
                                 <ul class="list-unstyled team-one__social">
@@ -730,7 +715,7 @@
                             <div class="team-one__img">
                                 <img src="{% static 'website/' %}assets/images/team/team-1-2.jpg" alt="">
                                 <div class="team-one__content">
-                                    <h4 class="team-one__name"><a href="team.html">Mike Hardson</a></h4>
+                                    <h4 class="team-one__name"><a href="team.html">Francis</a></h4>
                                     <p class="team-one__sub-title">Manager</p>
                                 </div>
                                 <ul class="list-unstyled team-one__social">
@@ -748,7 +733,7 @@
                             <div class="team-one__img">
                                 <img src="{% static 'website/' %}assets/images/team/team-1-3.jpg" alt="">
                                 <div class="team-one__content">
-                                    <h4 class="team-one__name"><a href="team.html">Millie Brown</a></h4>
+                                    <h4 class="team-one__name"><a href="team.html">Francis Njue</a></h4>
                                     <p class="team-one__sub-title">Manager</p>
                                 </div>
                                 <ul class="list-unstyled team-one__social">
@@ -847,8 +832,7 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                             <div class="footer-widget__column footer-widget__about">
                                 <div class="footer-widget__about-text-box">
-                                    <p class="footer-widget__about-text">TV on your every screen with the so fastest
-                                        internet</p>
+                                    <p class="footer-widget__about-text">Quality fast internet connection</p>
                                 </div>
                                 <div class="site-footer__social">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
