--- a/website/templates/cart.html
+++ b/website/templates/cart.html
@@ -309,8 +309,7 @@
                                             </div>
                                             <div class="main-menu__help-line-content">
                                                 <p class="main-menu__help-line-sub-title">Help line</p>
-                                                <h5 class="main-menu__help-line-number"><a href="tel:8898006802">+88
-                                                        (9800) 6802</a></h5>
+                                                <h5 class="main-menu__help-line-number"><a href="tel:25407556977">+254 07 556 977</a></a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -496,8 +495,7 @@
                         <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="300ms">
                             <div class="footer-widget__column footer-widget__meet-us clearfix">
                                 <h3 class="footer-widget__title">Meet us</h3>
-                                <p class="ooter-widget__meet-us-text">30 Broklyn Golden Street, New <br> York United
-                                    States of <br> America</p>
+                                <p class="ooter-widget__meet-us-text">Laikipia East <br> Nanyuki <br> Kenya</p>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
@@ -506,12 +504,12 @@
                                 <ul class="list-unstyled footer-widget__contact-list">
                                     <li>
                                         <div class="text">
-                                            <p><a href="mailto:needhelp@company.com ">needhelp@company.com</a></p>
+                                            <p><a href="mailto:needhelp@hurucom.net ">needhelp@hurucom.net</a></p>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="text">
-                                            <p><a href="tel:8898006802">+88 (9800) 6802</a></p>
+                                            <p><a href="tel:25407556977">+254 07 556 977</a></p>
                                         </div>
                                     </li>
                                 </ul>
