--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -312,7 +312,7 @@
                                             </div>
                                             <div class="main-menu__help-line-content">
                                                 <p class="main-menu__help-line-sub-title">Help line</p>
-                                                <h5 class="main-menu__help-line-number"><a href="tel:+254 707 556 977">+254 707 556 977</a></h5>
+                                                <h5 class="main-menu__help-line-number"><a href="tel:25407556977">+254 07 556 977</a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -496,12 +496,12 @@
                                 <ul class="list-unstyled footer-widget__contact-list">
                                     <li>
                                         <div class="text">
-                                            <p><a href="mailto:needhelp@company.com ">needhelp@hurucom.net</a></p>
+                                            <p><a href="mailto:needhelp@hurucom.net ">needhelp@hurucom.net</a></p>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="text">
-                                            <p><a href="tel:+254 707 556 977">+254 707 556 977</a></p>
+                                            <p><a href="tel:25407556977">+254 07 556 977</a></p>
                                         </div>
                                     </li>
                                 </ul>
