--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -152,9 +152,7 @@
                                             </div>
                                             <div class="main-menu-three__help-line-content">
                                                 <p class="main-menu-three__help-line-sub-title">Help line</p>
-                                                <h5 class="main-menu-three__help-line-number"><a
-                                                        href="tel:8898006802">+254
-                                                        707 55 69 77</a></h5>
+                                                <h5 class="main-menu-three__help-line-number"><a href="tel:25407556977">+254 07 556 977</a></h5>
                                             </div>
                                         </div>
                                         <div class="main-menu-three__btn-box">
@@ -1265,12 +1263,12 @@
                                 <ul class="list-unstyled footer-widget__contact-list">
                                     <li>
                                         <div class="text">
-                                            <p><a href="mailto:needhelp@company.com ">needhelp@hurucom.net</a></p>
+                                            <p><a href="mailto:needhelp@hurucom.net ">needhelp@hurucom.net</a></p>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="text">
-                                            <p><a href="tel:8898006802">+254 707 55 69 77 </a></p>
+                                            <p><a href="tel:25407556977">+254 07 556 977</a></p>
                                         </div>
                                     </li>
                                 </ul>
