--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -92,7 +92,7 @@
                                             <i class="fas fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:needhelp@company.com">needhelp@hurucom.net</a></p>
+                                            <p><a href="mailto:needhelp@hurucom.net">needhelp@hurucom.net</a></p>
                                         </div>
                                     </li>
                                 </ul>
