--- a/website/templates/checkout.html
+++ b/website/templates/checkout.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -91,7 +93,7 @@
                                             <i class="fas fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:needhelp@company.com">needhelp@company.com</a></p>
+                                            <p><a href="mailto:needhelp@hurucom.net">needhelp@hurucom.net</a></p>
                                         </div>
                                     </li>
                                 </ul>
@@ -107,7 +109,7 @@
                                     <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                                     <ul class="main-menu__list">
                                         <li class="megamenu megamenu-clickable megamenu-clickable--toggler">
-                                            <a href="index.html">Demos</a>
+                                            <!-- a href="index.html">Demos</a -->
                                             <ul>
                                                 <li>
                                                     <div class="megamenu-popup">
@@ -310,8 +312,7 @@
                                             </div>
                                             <div class="main-menu__help-line-content">
                                                 <p class="main-menu__help-line-sub-title">Help line</p>
-                                                <h5 class="main-menu__help-line-number"><a href="tel:8898006802">+88
-                                                        (9800) 6802</a></h5>
+                                                <h5 class="main-menu__help-line-number"><a href="tel:25407556977">+254 07 556 977</a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -623,8 +624,7 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                             <div class="footer-widget__column footer-widget__about">
                                 <div class="footer-widget__about-text-box">
-                                    <p class="footer-widget__about-text">TV on your every screen with the so fastest
-                                        internet</p>
+                                    <p class="footer-widget__about-text">Quality fast internet connection</p>
                                 </div>
                                 <div class="site-footer__social">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
