--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -548,7 +548,7 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+254 707 556 977">+254 707 556 977 </a>
+                    <a href="tel:254 707 556 977">+254 707 556 977</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
