--- a/website/templates/cart.html
+++ b/website/templates/cart.html
@@ -522,7 +522,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© All Copyright 2022 by <a href="#">Zeinet.com</a>
+                                <p class="site-footer__bottom-text">© All Copyright 2024 by <a href="#">Hurucom.net</a>
                                 </p>
                             </div>
                         </div>
@@ -543,8 +543,8 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="{% static 'website/' %}assets/images/resources/logo-2.png" width="125"
-                        height="43" alt="" /></a>
+                <a href="{% url 'home' %}" aria-label="logo image"><img src="{% static 'website/assets/images/resources/hurucom logo.png' %}" width="140" height="80"
+                    alt="" /></a>
             </div>
             <!-- /.logo-box -->
             <div class="mobile-nav__container"></div>
@@ -553,11 +553,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">needhelp@zeinet.com</a>
+                    <a href="mailto:needhelp@packageName__.com">needhelp@hurucom.net</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:254 707 556 977">+254 707 556 977</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
