--- a/website/templates/gallery.html
+++ b/website/templates/gallery.html
@@ -559,8 +559,8 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="{% static 'website/' %}assets/images/resources/logo-2.png" width="125" height="43"
-                        alt="" /></a>
+                <a href="{% url 'home' %}" aria-label="logo image"><img src="{% static 'website/assets/images/resources/hurucom logo.png' %}" width="140" height="80"
+                    alt="" /></a>
             </div>
             <!-- /.logo-box -->
             <div class="mobile-nav__container"></div>
