--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -570,7 +570,7 @@
                                         <i class="fa fa-check"></i>
                                     </div>
                                     <div class="text">
-                                        <p>8 Mbps Bandwidth</p>
+                                        <p>Up to an 8 Mbps Bandwidth</p>
                                     </div>
                                 </li>
                                 <li>
@@ -594,7 +594,7 @@
                                         <i class="fa fa-check"></i>
                                     </div>
                                     <div class="text">
-                                        <p>Unlimited devices users</p>
+                                        <p>Unlimited devices</p>
                                     </div>
                                 </li>
                             </ul>
@@ -634,7 +634,7 @@
                                         <i class="fa fa-check"></i>
                                     </div>
                                     <div class="text">
-                                        <p>15 Mbps Bandwidth</p>
+                                        <p>Up to a 15 Mbps Bandwidth</p>
                                     </div>
                                 </li>
                                 <li>
@@ -658,7 +658,7 @@
                                         <i class="fa fa-check"></i>
                                     </div>
                                     <div class="text">
-                                        <p>Unlimited devices users</p>
+                                        <p>Unlimited devices</p>
                                     </div>
                                 </li>
                             </ul>
@@ -698,7 +698,7 @@
                                         <i class="fa fa-check"></i>
                                     </div>
                                     <div class="text">
-                                        <p>30 Mbps Bandwidth</p>
+                                        <p>Up to a 30 Mbps Bandwidth</p>
                                     </div>
                                 </li>
                                 <li>
@@ -722,7 +722,7 @@
                                         <i class="fa fa-check"></i>
                                     </div>
                                     <div class="text">
-                                        <p>Unlimited devices users</p>
+                                        <p>Unlimited devices</p>
                                     </div>
                                 </li>
                             </ul>
