--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -602,7 +602,7 @@
                                 <h2 class="price__box-price"> <sup class="price__box-price-dolar">KES</sup> 2,000
                                     <sup class="price__box-price-last-text">.00</sup> </h2>
                                 <div class="price__btn-box">
-                                    <a href="contact.html" class="thm-btn price__btn">Get started</a>
+                                    <a href="{% url 'contact' %}" class="thm-btn price__btn">Get started</a>
                                 </div>
                             </div>
                         </div>
@@ -666,7 +666,7 @@
                                 <h2 class="price__box-price"> <sup class="price__box-price-dolar">KES</sup> 3,500
                                     <sup class="price__box-price-last-text">.00</sup> </h2>
                                 <div class="price__btn-box">
-                                    <a href="contact.html" class="thm-btn price__btn">Get started</a>
+                                    <a href="{% url 'contact' %}" class="thm-btn price__btn">Get started</a>
                                 </div>
                             </div>
                         </div>
@@ -730,7 +730,7 @@
                                 <h2 class="price__box-price"> <sup class="price__box-price-dolar">KES</sup> 5,000
                                     <sup class="price__box-price-last-text">.00</sup> </h2>
                                 <div class="price__btn-box">
-                                    <a href="contact.html" class="thm-btn price__btn">Get started</a>
+                                    <a href="{% url 'contact' %}" class="thm-btn price__btn">Get started</a>
                                 </div>
                             </div>
                         </div>
