--- a/website/templates/packages-01.html
+++ b/website/templates/packages-01.html
@@ -408,7 +408,7 @@
                                         <p class="plans-one__price-time">/ month</p>
                                     </div>
                                     <div class="plans-one__btn-box">
-                                        <a href="contact.html" class="thm-btn plans-one__btn">Get started</a>
+                                        <a href="{% url 'contact' %}" class="thm-btn plans-one__btn">Get started</a>
                                     </div>
                                 </div>
                                 <div class="plans-one__icon-box">
@@ -467,7 +467,7 @@
                                         <p class="plans-one__price-time">/ month</p>
                                     </div>
                                     <div class="plans-one__btn-box">
-                                        <a href="contact.html" class="thm-btn plans-one__btn">Get started</a>
+                                        <a href="{% url 'contact' %}" class="thm-btn plans-one__btn">Get started</a>
                                     </div>
                                 </div>
                                 <div class="plans-one__icon-box">
@@ -527,7 +527,7 @@
                                         <p class="plans-one__price-time">/ month</p>
                                     </div>
                                     <div class="plans-one__btn-box">
-                                        <a href="contact.html" class="thm-btn plans-one__btn">Get started</a>
+                                        <a href="{% url 'contact' %}" class="thm-btn plans-one__btn">Get started</a>
                                     </div>
                                 </div>
                                 <div class="plans-one__icon-box">
