--- a/website/templates/packages-01.html
+++ b/website/templates/packages-01.html
@@ -373,7 +373,7 @@
                                             <i class="fa fa-check"></i>
                                         </div>
                                         <div class="text">
-                                            <p>Up to an 8 Mbps Bandwith</p>
+                                            <p>Up to an 8 Mbps Bandwidth</p>
                                         </div>
                                     </li>
                                     <li>
@@ -516,7 +516,7 @@
                                             <i class="fa fa-check"></i>
                                         </div>
                                         <div class="text">
-                                            <p>Unlimited devices</p>
+                                            <p>Unlimited devices users</p>
                                         </div>
                                     </li>
                                 </ul>
