--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -594,7 +594,7 @@
                                         <i class="fa fa-check"></i>
                                     </div>
                                     <div class="text">
-                                        <p>Unlimited devices</p>
+                                        <p>Unlimited devices users</p>
                                     </div>
                                 </li>
                             </ul>
@@ -658,7 +658,7 @@
                                         <i class="fa fa-check"></i>
                                     </div>
                                     <div class="text">
-                                        <p>Unlimited devices</p>
+                                        <p>Unlimited devices users</p>
                                     </div>
                                 </li>
                             </ul>
@@ -722,7 +722,7 @@
                                         <i class="fa fa-check"></i>
                                     </div>
                                     <div class="text">
-                                        <p>Unlimited devices</p>
+                                        <p>Unlimited devices users</p>
                                     </div>
                                 </li>
                             </ul>
