--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -370,7 +370,7 @@
                                     </div>
                                     <div class="content">
                                         <p>Have any question?</p>
-                                        <h4><a href="tel:+254 707 556 977">Free +254 707 556 977</a></h4>
+                                        <h4><a href="tel:254707556977">+254 707 556 977</a></h4>
                                     </div>
                                 </li>
                                 <li>
@@ -501,7 +501,7 @@
                                     </li>
                                     <li>
                                         <div class="text">
-                                            <p><a href="tel:25407556977">+254 07 556 977</a></p>
+                                            <p><a href="tel:254707556977">+254 707 556 977</a></p>
                                         </div>
                                     </li>
                                 </ul>
@@ -548,7 +548,7 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:254 707 556 977">+254 707 556 977</a>
+                    <a href="tel:254707556977">+254 707 556 977</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
