--- a/website/templates/gallery-carousel.html
+++ b/website/templates/gallery-carousel.html
@@ -547,7 +547,7 @@
                                     </li>
                                     <li>
                                         <div class="text">
-                                            <p><a href="tel:25407556977">+254 07 556 977</a></p>
+                                            <p><a href="tel:254707556977">+254 707 556 977</a></p>
                                         </div>
                                     </li>
                                 </ul>
@@ -594,7 +594,7 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:254 707 556 977">+254 707 556 977</a>
+                    <a href="tel:254707556977">+254 707 556 977</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
