--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -198,9 +198,9 @@
                             <div class="row">
                                 <div class="col-xl-12">
                                     <div class="main-slider-three__content">
-                                        <p class="main-slider-three__sub-title">Internet Great Plan</p>
-                                        <h2 class="main-slider-three__title">Get Entertainment <br> in One
-                                            <span>Place</span> </h2>
+                                        <p class="main-slider-three__sub-title">HURUCOM ISP</p>
+                                        <h2 class="main-slider-three__title">Faster <br> More Flexible
+                                            <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
                                             <a href="about.html" class="thm-btn main-slider__btn"> Discover more</a>
                                         </div>
@@ -222,9 +222,9 @@
                             <div class="row">
                                 <div class="col-xl-12">
                                     <div class="main-slider-three__content">
-                                        <p class="main-slider-three__sub-title">Internet Great Plan</p>
-                                        <h2 class="main-slider-three__title">Get Entertainment <br> in One
-                                            <span>Place</span> </h2>
+                                        <p class="main-slider-three__sub-title">HURUCOM ISP</p>
+                                        <h2 class="main-slider-three__title">Faster <br> More Flexible
+                                            <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
                                             <a href="about.html" class="thm-btn main-slider__btn"> Discover more</a>
                                         </div>
@@ -246,9 +246,9 @@
                             <div class="row">
                                 <div class="col-xl-12">
                                     <div class="main-slider-three__content">
-                                        <p class="main-slider-three__sub-title">Internet Great Plan</p>
-                                        <h2 class="main-slider-three__title">Get Entertainment <br> in One
-                                            <span>Place</span> </h2>
+                                        <p class="main-slider-three__sub-title">HURUCOM ISP</p>
+                                        <h2 class="main-slider-three__title">Faster <br> More Flexible
+                                            <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
                                             <a href="about.html" class="thm-btn main-slider__btn"> Discover more</a>
                                         </div>
