--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -199,7 +199,7 @@
                                 <div class="col-xl-12">
                                     <div class="main-slider-three__content">
                                         <p class="main-slider-three__sub-title">HURUCOM ISP</p>
-                                        <h2 class="main-slider-three__title">Faster <br> More Flexible
+                                        <h2 class="main-slider-three__title">Faster, <br> More Flexible,
                                             <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
                                             <a href="about.html" class="thm-btn main-slider__btn"> Discover more</a>
@@ -223,7 +223,7 @@
                                 <div class="col-xl-12">
                                     <div class="main-slider-three__content">
                                         <p class="main-slider-three__sub-title">HURUCOM ISP</p>
-                                        <h2 class="main-slider-three__title">Faster <br> More Flexible
+                                        <h2 class="main-slider-three__title">Faster, <br> More Flexible,
                                             <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
                                             <a href="about.html" class="thm-btn main-slider__btn"> Discover more</a>
@@ -247,7 +247,7 @@
                                 <div class="col-xl-12">
                                     <div class="main-slider-three__content">
                                         <p class="main-slider-three__sub-title">HURUCOM ISP</p>
-                                        <h2 class="main-slider-three__title">Faster <br> More Flexible
+                                        <h2 class="main-slider-three__title">Faster, <br> More Flexible,
                                             <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
                                             <a href="about.html" class="thm-btn main-slider__btn"> Discover more</a>
