--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -198,7 +198,7 @@
                             <div class="row">
                                 <div class="col-xl-12">
                                     <div class="main-slider-three__content">
-                                        <p class="main-slider-three__sub-title">HURUCOM ISP</p>
+                                        <p class="main-slider-three__sub-title">Hurucom Isp</p>
                                         <h2 class="main-slider-three__title">Faster, <br> More Flexible,
                                             <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
@@ -222,7 +222,7 @@
                             <div class="row">
                                 <div class="col-xl-12">
                                     <div class="main-slider-three__content">
-                                        <p class="main-slider-three__sub-title">HURUCOM ISP</p>
+                                        <p class="main-slider-three__sub-title">Hurucom Isp</p>
                                         <h2 class="main-slider-three__title">Faster, <br> More Flexible,
                                             <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
@@ -246,7 +246,7 @@
                             <div class="row">
                                 <div class="col-xl-12">
                                     <div class="main-slider-three__content">
-                                        <p class="main-slider-three__sub-title">HURUCOM ISP</p>
+                                        <p class="main-slider-three__sub-title">Hurucom Isp</p>
                                         <h2 class="main-slider-three__title">Faster, <br> More Flexible,
                                             <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
