--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -250,7 +250,7 @@
                                         <h2 class="main-slider-three__title">Faster, <br> More Flexible,
                                             <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
-                                            <a href="about.html" class="thm-btn main-slider__btn"> Discover more</a>
+                                            <a href="#about" class="thm-btn main-slider__btn"> Discover more</a>
                                         </div>
                                         <div class="main-slider-three__shape-1">
                                             <img src="{% static 'website/assets/images/shapes/main-slider-three-shape-2.png' %}" alt="">
@@ -294,7 +294,7 @@
                         </div>
                     </div>
                     <div class="wifi-pack__btn-box">
-                        <a href="packages-01.html" class="thm-btn wifi-pack__btn">Purchase now</a>
+                        <a href="{% url 'packages1' %}" class="thm-btn wifi-pack__btn">Purchase now</a>
                     </div>
                 </div>
             </div>
