--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -144,7 +144,7 @@
                                         <div class="main-menu-three__search-box">
                                             <a href="#"
                                                 class="main-menu-three__search search-toggler icon-magnifying-glass"></a>
-                                            <a href="cart.html" class="main-menu-three__search  icon-shopping-cart"></a>
+                                            <a href="{% url 'cart' %}" class="main-menu-three__search  icon-shopping-cart"></a>
                                         </div>
                                         <div class="main-menu-three__help-line">
                                             <div class="main-menu-three__help-line-icon">
@@ -202,7 +202,7 @@
                                         <h2 class="main-slider-three__title">Faster, <br> More Flexible,
                                             <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
-                                            <a href="about.html" class="thm-btn main-slider__btn"> Discover more</a>
+                                            <a href="#about" class="thm-btn main-slider__btn"> Discover more</a>
                                         </div>
                                         <div class="main-slider-three__shape-1">
                                             <img src="{% static 'website/assets/images/shapes/main-slider-three-shape-2.png' %}" alt="">
@@ -226,7 +226,7 @@
                                         <h2 class="main-slider-three__title">Faster, <br> More Flexible,
                                             <span>Internet Plans</span> </h2>
                                         <div class="main-slider-three__btn-box">
-                                            <a href="about.html" class="thm-btn main-slider__btn"> Discover more</a>
+                                            <a href="#about" class="thm-btn main-slider__btn"> Discover more</a>
                                         </div>
                                         <div class="main-slider-three__shape-1">
                                             <img src="{% static 'website/assets/images/shapes/main-slider-three-shape-2.png' %}" alt="">
