--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -339,7 +339,7 @@
                                 </li>
                             </ul>
                             <p class="about-two__text">We connect the unconnected. Improving lives through unlimited access to knowledge & opportunities</p>
-                            <a href="about.html" class="thm-btn about-two__btn">Discover more</a>
+                            <a href="#services" class="thm-btn about-two__btn">Discover more</a>
                         </div>
                     </div>
                     <div class="col-xl-6">
