--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -11,9 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HURUCOM</title>
     <!-- favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'website/assets/images/favicons/hurucom title1.png' %}" />
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'website/assets/images/favicons/hurucom title1.png' %}" />
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'website/assets/images/favicons/hurucom title1.png' %}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'website/assets/images/favicons/hurucom title.png' %}" />
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'website/assets/images/favicons/hurucom title.png' %}" />
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'website/assets/images/favicons/hurucom title.png' %}" />
     <link rel="manifest" href="{% static 'website/assets/images/favicons/site.webmanifest' %}" />
     <meta name="description" content="HURUCOM" />
 
@@ -112,7 +112,7 @@
                     <div class="main-menu-three__wrapper-inner clearfix">
                         <div class="main-menu-three__left">
                             <div class="main-menu-three__logo">
-                                <a href="{% url 'home' %}"><img src="{% static 'website/assets/images/resources/hurucom logo.png' %}" alt="" width="140"
+                                <a href="{% url 'home' %}"><img src="{% static 'website/assets/images/resources/hurucom logo1.png' %}" alt="" width="140"
                                         height="80"></a>
                             </div>
                         </div>
