--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -73,7 +73,7 @@
                     <div class="main-menu__wrapper clearfix">
                         <div class="main-menu__left">
                             <div class="main-menu__logo">
-                                <a href="{% url 'home' %}"><img src="{% static 'website/assets/images/resources/hurucom logo.png' %}" alt="" width="140" height="80"></a>
+                                <a href="{% url 'home' %}"><img src="{% static 'website/assets/images/resources/hurucom logo1.png' %}" alt="" width="140" height="80"></a>
                             </div>
                         </div>
                         <div class="main-menu__right">
@@ -903,7 +903,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="{% url 'home' %}" aria-label="logo image"><img src="{% static 'website/assets/images/resources/hurucom logo.png' %}" width="140" height="80"
+                <a href="{% url 'home' %}" aria-label="logo image"><img src="{% static 'website/assets/images/resources/hurucom logo1.png' %}" width="140" height="80"
                     alt="" /></a>
             </div>
             <!-- /.logo-box -->
