--- a/website/templates/cart.html
+++ b/website/templates/cart.html
@@ -543,7 +543,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="{% url 'home' %}" aria-label="logo image"><img src="{% static 'website/assets/images/resources/hurucom logo.png' %}" width="140" height="80"
+                <a href="{% url 'home' %}" aria-label="logo image"><img src="{% static 'website/assets/images/resources/hurucom logo1.png' %}" width="140" height="80"
                     alt="" /></a>
             </div>
             <!-- /.logo-box -->
