--- a/website/templates/checkout.html
+++ b/website/templates/checkout.html
@@ -74,7 +74,7 @@
                     <div class="main-menu__wrapper clearfix">
                         <div class="main-menu__left">
                             <div class="main-menu__logo">
-                                <a href="{% url 'home' %}"><img src="{% static 'website/assets/images/resources/hurucom logo.png' %}" alt="" width="140" height="80"></a>
+                                <a href="{% url 'home' %}"><img src="{% static 'website/assets/images/resources/hurucom logo1.png' %}" alt="" width="140" height="80"></a>
                             </div>
                         </div>
                         <div class="main-menu__right">
