--- a/website/templates/news-sidebar-left.html
+++ b/website/templates/news-sidebar-left.html
@@ -71,8 +71,7 @@
 					<div class="main-menu__wrapper clearfix">
 						<div class="main-menu__left">
 							<div class="main-menu__logo">
-								<a href="index.html"><img src="assets/images/resources/logo-1.png" alt="" width="125"
-										height="43"></a>
+								<a href="{% url 'home' %}"><img src="{% static 'website' %}assets/images/resources/hurucom logo1.png" alt="" width="140" height="80"></a>
 							</div>
 						</div>
 						<div class="main-menu__right">
