--- a/website/templates/news-carousel.html
+++ b/website/templates/news-carousel.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HURUCOM</title> {% static 'website' %}
+    <title>HURUCOM</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'website' %}assets/images/favicons/hurucom title.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'website' %}assets/images/favicons/hurucom title.png" />
