--- a/website/templates/news.html
+++ b/website/templates/news.html
@@ -106,7 +106,7 @@
                                     <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                                     <ul class="main-menu__list">
                                         <li class="megamenu megamenu-clickable megamenu-clickable--toggler">
-                                            <a href="index.html">Demos</a>
+                                            <!--a href="index.html">Demos</a -->
                                             <ul>
                                                 <li>
                                                     <div class="megamenu-popup">
